AppInmobiliaria/force-app/main/default/objects/Inmueble__c/Inmueble__c.object-meta.xml
<CustomObject>
    <label>Inmueble</label>
    <nameField>
        <displayFormat>INM-{00000}</displayFormat>
        <label>Referencia Inmueble</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inmuebles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>