AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Ascensor_Matchmaking__c.field-meta.xml
<CustomField>
    <fullName>Ascensor_Matchmaking__c</fullName>
    <formula>IF(NOT(ISBLANK(Edificio__c)), Edificio__r.Tiene_Ascensor__c, Tiene_Ascensor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Ascensor Matchmaking</label>
    <type>Checkbox</type>
</CustomField>