AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Banos__c.field-meta.xml
<CustomField>
    <fullName>Banos__c</fullName>
    <label>Baños</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>