AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Calle_Propia__c.field-meta.xml
<CustomField>
    <fullName>Calle_Propia__c</fullName>
    <label>Calle y Número (Propio)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>