AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Codigo_Catastral__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Catastral__c</fullName>
    <inlineHelpText>Introduce los 20 caracteres del código catastral del inmueble.</inlineHelpText>
    <label>Código Catastral</label>
    <length>20</length>
    <type>Text</type>
</CustomField>