AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <label>Código Postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>