AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Codigo_Postal_Propio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_Propio__c</fullName>
    <label>Código Postal (Propio)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>