AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Conserje__c.field-meta.xml
<CustomField>
    <fullName>Conserje__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conserje</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inmuebles (Conserje)</relationshipLabel>
    <relationshipName>Inmuebles_Conserje</relationshipName>
    <type>Lookup</type>
</CustomField>