AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Direccion_Matchmaking__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Matchmaking__c</fullName>
    <formula>IF(NOT(ISBLANK(Edificio__c)), Edificio__r.Calle__c, Calle_Propia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección para Matchmaking</label>
    <type>Text</type>
</CustomField>