AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Edificio__c.field-meta.xml
<CustomField>
    <fullName>Edificio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edificio / Finca</label>
    <referenceTo>Edificio__c</referenceTo>
    <relationshipLabel>Inmuebles en este Edificio</relationshipLabel>
    <relationshipName>Inmuebles</relationshipName>
    <type>Lookup</type>
</CustomField>