AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Escalera__c.field-meta.xml
<CustomField>
    <fullName>Escalera__c</fullName>
    <label>Escalera</label>
    <length>50</length>
    <type>Text</type>
</CustomField>