AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Estado_Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Ocupacion__c</fullName>
    <label>Estado de Ocupación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacío</fullName>
            </value>
            <value>
                <fullName>Alquilado</fullName>
            </value>
            <value>
                <fullName>Propietario Reside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>