AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Foto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Foto_Principal__c</fullName>
    <inlineHelpText>Copia y pega aquí la imagen principal o portada del inmueble (máx. 1MB recomendado).</inlineHelpText>
    <label>Foto Principal de Portada</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>