AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Habitaciones__c.field-meta.xml
<CustomField>
    <fullName>Habitaciones__c</fullName>
    <label>Habitaciones</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>