AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Metros_Cuadrados__c.field-meta.xml
<CustomField>
    <fullName>Metros_Cuadrados__c</fullName>
    <label>Metros Cuadrados</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>