AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Otras_Caracteristicas__c.field-meta.xml
<CustomField>
    <fullName>Otras_Caracteristicas__c</fullName>
    <label>Otras Características / Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>