AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Piso__c.field-meta.xml
<CustomField>
    <fullName>Piso__c</fullName>
    <label>Piso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>