AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Poblacion__c.field-meta.xml
<CustomField>
    <fullName>Poblacion__c</fullName>
    <label>Población / Municipio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>