AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inmuebles (Propietario)</relationshipLabel>
    <relationshipName>Inmuebles_Propios</relationshipName>
    <type>Lookup</type>
</CustomField>