AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincias_Espana</valueSetName>
    </valueSet>
</CustomField>