AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Provincia_Matchmaking__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Matchmaking__c</fullName>
    <formula>IF(NOT(ISBLANK(Edificio__c)), TEXT(Edificio__r.Provincia__c), TEXT(Provincia_Propia__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia para Matchmaking</label>
    <type>Text</type>
</CustomField>