AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Provincia_Propia__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Propia__c</fullName>
    <label>Provincia (Propia)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincias_Espana</valueSetName>
    </valueSet>
</CustomField>