AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Puerta__c.field-meta.xml
<CustomField>
    <fullName>Puerta__c</fullName>
    <label>Puerta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>