AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <displayFormat>INM-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Referencia Inmueble</label>
    <type>AutoNumber</type>
</CustomField>