AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <formula>IF(
    ISBLANK(Cover_Image_Id__c),
    &quot;&quot;,
    IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Cover_Image_Id__c, &quot;Cover Photo&quot;, 120, 160)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail</label>
    <type>Text</type>
</CustomField>