AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/Tipo_Inmueble__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Inmueble__c</fullName>
    <label>Tipo de Inmueble</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Piso / Apartamento</fullName>
                <default>true</default>
                <label>Piso / Apartamento</label>
            </value>
            <value>
                <fullName>Chalet / Casa</fullName>
            </value>
            <value>
                <fullName>Local Comercial</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Terreno / Parcela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>