AppInmobiliaria/force-app/main/default/objects/Inmueble__c/fields/URL_Publicacion__c.field-meta.xml
<CustomField>
    <fullName>URL_Publicacion__c</fullName>
    <inlineHelpText>Enlace al anuncio en Idealista, Fotocasa o la web corporativa.</inlineHelpText>
    <label>URL Publicación</label>
    <type>Url</type>
</CustomField>