AppInmobiliaria/force-app/main/default/objects/Inmueble__c/validationRules/Banos_Enteros.validationRule-meta.xml
<ValidationRule>
    <fullName>Banos_Enteros</fullName>
    <active>true</active>
    <errorConditionFormula>FLOOR(Banos__c) &lt;&gt; Banos__c</errorConditionFormula>
    <errorDisplayField>Banos__c</errorDisplayField>
    <errorMessage>El número de baños debe ser un valor exacto entero (sin decimales).</errorMessage>
</ValidationRule>