AppInmobiliaria/force-app/main/default/objects/Inmueble__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Calle__c</columns>
    <columns>Piso__c</columns>
    <columns>Puerta__c</columns>
    <columns>Estado_Ocupacion__c</columns>
    <columns>Propietario__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>